--- a/app/assets/styles/_charts.scss
+++ b/app/assets/styles/_charts.scss
@@ -27,7 +27,7 @@
 }
 
 .reliability-key-total li {
-  margin-top: $global-spacing;
+  margin-top: $global-spacing/2;
   &:first-child {
      &:before{
       background-color: $infographic-c-color;
@@ -41,7 +41,7 @@
 }
 
 .reliability-key-breakdown li {
-  margin-top: $global-spacing;
+  margin-top: $global-spacing/2;
   &:first-child {
      &:before{
       background-color: tint($infographic-b-color, 50%);
@@ -50,22 +50,6 @@
   &:last-child {
      &:before{
       background-color: $infographic-b-color;
-     }
-  }
-}
-
-.reliability-key-total li {
-  margin-top: 0;
-
-  &:first-child {
-     &:before{
-      background-color: $infographic-c-color;
-     }
-  }
-
-  &:last-child {
-     &:before{
-      background-color: tint($infographic-c-color, 50%);
      }
   }
 }
@@ -90,6 +74,26 @@
   }
 }
 
+.carbon-key li {
+  &:first-child {
+     &:before{
+      background-color: rgba($highlight-color, 0.4);
+     }
+  }
+
+  &:nth-child(2) {
+     &:before{
+      background-color: rgba($highlight-color, 0.7);
+     }
+  }
+
+  &:last-child {
+     &:before{
+      background-color: rgba($highlight-color, 0.9);
+     }
+  }
+}
+
 
 svg.chart {
   // Avoids that the chart grows because of the gap left by inline elements.
@@ -108,6 +112,7 @@ svg.chart {
 }
 
 .section--carbon .carbon-chart-wrapper {
+  min-height: 20rem;
     .area {
     &:nth-child(1) {
       fill: rgba($highlight-color, 0.9);
@@ -122,6 +127,10 @@ svg.chart {
 }
 
 .section--access .area-chart-wrapper {
+  min-height: 10rem;
+  @include media(medium-up) {
+  min-height: 20rem;
+  }
     .area {
     &:nth-child(1) {
       fill: rgba($infographic-b-color, 0.9);
@@ -137,7 +146,6 @@ svg.chart {
 
 .section--carbon .carbon-chart-wrapper,
 .section--access .area-chart-wrapper {
-  min-height: 20rem;
   width: 100%;
 
   .tick:nth-child(odd) {
